--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  tmdb_api: 2.1.4
+  google_fonts:
 
 
   # The following adds the Cupertino Icons font to your application.
